--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -26,9 +26,7 @@ body{
 }
 .section_title{
     text-align: center;
-    
-    /* h1 */
-    font-family: "Days One", serif;
+    font-family: "Days One" ,sans-serif;
     font-size: 40px;
     font-style: normal;
     font-weight: 700;
