--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,8 +27,7 @@ body {
 
 .section_title {
   text-align: center;
-  /* h1 */
-  font-family: "Days One", serif;
+  font-family: "Days One", sans-serif;
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
@@ -214,7 +213,70 @@ body {
   text-underline-position: from-font;
 }
 
-.footer button {
+.contacts {
+  padding-top: 85px;
+  padding-bottom: 70px;
+}
+.contacts .container {
+  display: flex;
+  justify-content: space-between;
+}
+.contacts .container .contact_top {
+  display: flex;
+  flex-direction: column;
+  gap: 15px 0;
+}
+.contacts .container .contact_top .section_title {
+  text-align: left;
+}
+.contacts .container .contact_info ul {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px 0;
+}
+.contacts .container .contact_info ul a {
+  font-size: 16px;
+  color: #F26037;
+  font-family: "Days One";
+  font-weight: 400;
+}
+.contacts .container .contact_info li {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.contacts .container .contact_form .contact_form_content {
+  margin-top: 31px;
+}
+.contacts .container .contact_form .contact_form_content .form_top {
+  display: flex;
+  justify-content: space-between;
+  gap: 21px;
+}
+.contacts .container .contact_form .contact_form_content .form_top label {
+  width: 100%;
+  position: relative;
+}
+.contacts .container .contact_form .contact_form_content .form_top label input {
+  outline: none;
+  width: 100%;
+  padding: 18px 20px;
+  border: 2px solid #C7D4F4;
+  border-radius: 6px;
+  background: #000B1A;
+}
+.contacts .container .contact_form .contact_form_content .form_top label .icon {
+  position: absolute;
+  right: 14px;
+  bottom: 14px;
+}
+
+.footer {
+  padding-top: 12px;
+}
+.footer .footer_left button {
   border-radius: 6px;
   border: 2px solid #F26037;
   background: #000B1A;
@@ -224,6 +286,44 @@ body {
   font-size: 16px;
   font-weight: 700;
   line-height: 160%;
+  width: fit-content;
+}
+.footer .footer_link_items {
+  display: flex;
+  gap: 0 79px;
+}
+.footer .footer_link_items .footer_link_item {
+  flex: 0 0 auto;
+}
+.footer .footer_link_items .footer_link_item ul {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin-top: 20px;
+}
+.footer .footer_link_items .footer_link_item li {
+  list-style: none;
+}
+.footer .footer_link_items .footer_link_item li span {
+  margin-bottom: 3px;
+  display: block;
+  color: #C7D4F4;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%;
+}
+.footer .footer_link_items .footer_link_item a {
+  color: #C7D4F4;
+  font-family: "Manrope";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 160%;
+  text-decoration-line: underline;
+}
+.footer .footer_link_items .footer_link_item.last_child a {
+  font-weight: 700;
 }
 .footer .container:nth-child(1) {
   padding: 35px 0;
@@ -247,6 +347,31 @@ body {
   flex-direction: column;
   gap: 22px;
   margin-top: 30px;
+}
+.footer .container .footer_form label {
+  width: 220px;
+  position: relative;
+}
+.footer .container .footer_form label input {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  width: 100%;
+  line-height: 160%;
+  border: 0;
+  background: transparent;
+  color: #ffffff;
+  border-bottom: 1px solid #C7D4F4;
+  padding-bottom: 10px;
+  outline: none;
+}
+.footer .container .footer_form label input::placeholder {
+  color: #687796;
+}
+.footer .container .footer_form .icon {
+  position: absolute;
+  right: 0;
+  bottom: 4px;
 }
 .footer .container.footer_bottom {
   display: flex;
