--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,14 +1,64 @@
 .footer {
-    button {
-        border-radius: 6px;
-        border: 2px solid #F26037;
-        background: #000B1A;
-        padding: 16px 29px;
-        color: #C7D4F4;
-        cursor: pointer;
-        font-size: 16px;
-        font-weight: 700;
-        line-height: 160%;
+    padding-top: 12px;
+
+    .footer_left {
+        button {
+            border-radius: 6px;
+            border: 2px solid #F26037;
+            background: #000B1A;
+            padding: 16px 29px;
+            color: #C7D4F4;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 160%;
+            width: fit-content;
+        }
+
+    }
+
+    .footer_link_items {
+        display: flex;
+        gap: 0 79px;
+
+        .footer_link_item {
+            flex: 0 0 auto;
+            ul{
+                display: flex;
+                flex-direction: column;
+                gap: 12px;
+                margin-top: 20px;
+            }
+            li {
+                list-style: none;
+
+                span {
+                    margin-bottom: 3px;
+                    display: block;
+                    color: #C7D4F4;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 160%;
+                }
+            }
+
+            a {
+                color: #C7D4F4;
+                font-family: 'Manrope';
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 160%;
+                text-decoration-line: underline;
+
+            }
+            &.last_child{
+                a{
+                    font-weight: 700;
+                }
+            }
+        }
     }
 
     .container {
@@ -21,8 +71,6 @@
         &.footer_top {
             display: flex;
             justify-content: space-between;
-
-
         }
 
         .footer_title {
@@ -38,7 +86,36 @@
             display: flex;
             flex-direction: column;
             gap: 22px;
-            margin-top:30px ;
+            margin-top: 30px;
+
+            label {
+                width: 220px;
+                position: relative;
+
+                input {
+                    font-size: 14px;
+                    font-style: normal;
+                    font-weight: 400;
+                    width: 100%;
+                    line-height: 160%;
+                    border: 0;
+                    background: transparent;
+                    color: #ffffff;
+                    border-bottom: 1px solid #C7D4F4;
+                    padding-bottom: 10px;
+                    outline: none;
+
+                    &::placeholder {
+                        color: #687796;
+                    }
+                }
+            }
+
+            .icon {
+                position: absolute;
+                right: 0;
+                bottom: 4px;
+            }
         }
 
         &.footer_bottom {
