--- a/assets/scss/_contacts.scss
+++ b/assets/scss/_contacts.scss
@@ -1,48 +1,58 @@
-.contacts{
+.contacts {
     padding-top: 85px;
     padding-bottom: 70px;
-    .container{
+
+    .container {
         display: flex;
         justify-content: space-between;
-        .contact_top{
+
+        .contact_top {
             display: flex;
             flex-direction: column;
             gap: 15px 0;
-            .section_title{
+
+            .section_title {
                 text-align: left;
             }
         }
-        .contact_info{
-            ul{
-            margin-top:20px;
+
+        .contact_info {
+            ul {
+                margin-top: 20px;
                 display: flex;
                 flex-direction: column;
                 gap: 25px 0;
-                a{
+
+                a {
                     font-size: 16px;
                     color: #F26037;
                     font-family: "Days One";
                     font-weight: 400;
                 }
             }
-            li{
+
+            li {
                 list-style: none;
                 display: flex;
                 flex-direction: column;
                 gap: 6px;
             }
         }
-        .contact_form{
-            .contact_form_content{
+
+        .contact_form {
+            .contact_form_content {
                 margin-top: 31px;
-                .form_top{
+
+                .form_top {
                     display: flex;
                     justify-content: space-between;
                     gap: 21px;
-                    label{
+
+                    label {
                         width: 100%;
                         position: relative;
-                        input{
+
+                        input {
                             outline: none;
                             width: 100%;
                             padding: 18px 20px;
@@ -50,13 +60,41 @@
                             border-radius: 6px;
                             background: #000B1A;
                         }
-                        .icon{
+
+                        .icon {
                             position: absolute;
-                            right: 14px ;
+                            right: 14px;
                             bottom: 14px;
                         }
                     }
                 }
+                label{
+                    position: relative;
+                    width: 100%;
+                    height: fit-content;
+                    textarea {
+                        display: block;
+                        margin-top: 21px;
+                        padding: 18px 20px;
+                        outline: none;
+                        border: 2px solid #C7D4F4;
+                        border-radius: 6px;
+                        background: #000B1A;
+                        width: 100%;
+                        color: rgba(199, 212, 244, 0.69);
+                        font-family: 'Manrope';
+                        font-size: 14px;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: 160%;
+                        min-height: 230px;
+                    }
+                    .icon{
+                        position: absolute;
+                        top: 14px;
+                    }
+                }
+               
             }
         }
     }
